--- a/css/layout.css
+++ b/css/layout.css
@@ -6,13 +6,13 @@ body {
 			"menu feed msg";
 }
 
-header {
+body > header {
 	grid-area: head;
 	background-color: #3366ff;
 
 }
 
-aside {
+body > aside {
 	background-color: #ccc;
 }
 .menu {
@@ -22,6 +22,7 @@ aside {
 	grid-area: msg;
 }
 
-main {
+body > main {
 	grid-area: feed;
+	padding: 40px;
 }
